# orange_slice

./: .gitignore  Cargo.toml  LICENSE  README.md  flatten_pe.py
bootloader/: Cargo.toml  build.rs  stage0.asm
bootloader/.cargo/: config
bootloader/src/: asm_routines.asm  core_reqs.rs  main.rs  mm.rs  panic.rs  pe.rs  pxe.rs  realmode.rs
debug_console/: Cargo.toml
debug_console/src/: main.rs
emu/: bochsrc.bxrc
kernel/: .gitignore  Cargo.toml
kernel/.cargo/: config
kernel/src/: acpi.rs  core_reqs.rs  main.rs  mm.rs  panic.rs
shared/cpu/: Cargo.toml
shared/cpu/src/: lib.rs
shared/mmu/: Cargo.toml
shared/mmu/src/: lib.rs
shared/rangeset/: Cargo.toml
shared/rangeset/src/: lib.rs
shared/safecast/: Cargo.toml  README.md
shared/safecast/bytesafe_derive/: Cargo.toml
shared/safecast/bytesafe_derive/src/: lib.rs
shared/safecast/src/: lib.rs
shared/serial/: Cargo.toml
shared/serial/src/: lib.rs
src/: main.rs
